# ss_workshop

./: CMakeLists.txt  README.md  package.xml  position_predictor.py  random_delay.py  uav_teleoperator.py  velocity_controller.py
include/ss_workshop/: common_operations.h  pid_controller.h  vel_controller.h
launch/: mav_maps.launch  mav_rrc.launch  mav_subt.launch  mav_with_box.launch  mav_with_wall.launch  uav_avoidance.launch  uav_controller.launch
models/media/materials/scripts/: target.material
models/meshes/: Plain_Cylinder.stl  ellipsoid.stl  ellipsoid_sim.stl  expParaboloid.stl  expParaboloidFull.stl  expParaboloid_sim.stl  noLabel0.25x2+y2+0.25z21-2.stl  noLabelx2y2z21.stl  paraboloid.stl  paraboloid_sim.stl
models/urdf/: box0.xacro  box1.xacro  cage.xacro  cf2.urdf  cf2.xacro  cf2_ccbf1.urdf  cf2_ccbf1.xacro  cf2_ccbf_sim.xacro  checkpoint.xacro  curved_wall.xacro  hb.xacro  hb_white.xacro  hummingbird.urdf  hummingbird.xacro  pelican.xacro  pelican_laser.xacro  pipe.xacro  ring.xacro  target.xacro  tb3_burger.urdf  tb3_burger.urdf.xacro  tb3_burger_acbf.urdf  tb3_burger_acbf_sim.urdf.xacro  tb3_burger_lcbf.urdf  tb3_burger_lcbf2.urdf.xacro  tb3_burger_lcbf_sim.urdf.xacro  test.urdf  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi_lcbf.urdf.xacro  wall.xacro
resources/: params.yaml  pid_pelican.yaml  vel_hummingbird.yaml  vel_pelican.yaml
rviz_config/: pointclouds.rviz
src/libs/: asm_controller.cpp  pid_controller.cpp  vel_controller.cpp
src/nodes/: pid_node.cpp  pid_node.h  vel_node.cpp  vel_node.h
src/scripts/: avoidance.py  dyn_cbf_controller.py  laser_cbf.py  laser_cbf_num.py  laser_cbf_shafterx4.py  node_wall.py  position_predictor.py  random_delay.py  scan2pcl2.py  sp_filter.py  spot_cbf.py  uav_teleoperator.py  vel_controller.py  velocity_controller.py  wall_cbf.py  wall_cbf_num.py
worlds/: basic.world  curved_shape.world  empty.world  test_world.world
worlds/s_shaped_wall/: model.config  model.sdf
worlds/s_shaped_wall/meshes/: s_shaped_wall.stl
worlds/subt/: subt.world
worlds/subt/models/subt/: model.config  model.sdf
